3-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  type: ClusterIP
  selector:
    app: conv-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
