3-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: conv-app.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: conv-app-clusterip
            port: 
              number: 80
  - host: conv-api.test
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: conv-api-clusterip
            port:
              number: 80
